2011-03-08  Paul Eggert  <eggert@cs.ucla.edu>

2011-03-08  Paul Eggert  <eggert@cs.ucla.edu>

	* xmenu.c (menu_highlight_callback): Now static.
	(set_frame_menubar): Remove unused local.
	(xmenu_show): Rename parameter to avoid shadowing.
	(xmenu_show, xdialog_show, xmenu_show): Make local pointers "const"
	since they might point to immutable storage.
	(next_menubar_widget_id): Declare only if USE_X_TOOLKIT,
	since it's unused otherwise.

	* xdisp.c (produce_glyphless_glyph): Initialize lower_xoff.
	Add a FIXME comment, since the code still doesn't look right.
	(Fcurrent_bidi_paragraph_direction): Simplify slightly; this
	avoids a gcc -Wuninitialized diagnostic.
	(display_line, BUILD_COMPOSITE_GLYPH_STRING, draw_glyphs):
	(note_mouse_highlight): Mark variables that gcc -Wuninitialized
	does not deduce are never used uninitialized.

	* lisp.h (IF_LINT): New macro, copied from ../lib-src/emacsclient.c.

	* xdisp.c (redisplay_window): Rename local to avoid shadowing.
	* window.c (window_loop, size_window):
	(run_window_configuration_change_hook, enlarge_window): Likewise.

	* window.c (display_buffer): Now static.
	(size_window): Mark variables that gcc -Wuninitialized
	does not deduce are never used uninitialized.
	* window.h (check_all_windows): New decl, to forestall
	gcc -Wmissing-prototypes diagnostic.

2011-03-06  Chong Yidong  <cyd@stupidchicken.com>

	* xdisp.c (redisplay_window): Revert incorrect logic in 2011-03-06
	change.

2011-03-06  Paul Eggert  <eggert@cs.ucla.edu>

	current_column: Now returns EMACS_INT, fixing some iftc
	that was introduced in the 2002-06-02 change "temporarily"; see
	<http://lists.gnu.org/archive/html/emacs-devel/2002-06/msg00039.html>.
	* bytecode.c (Fbyte_code): Don't cast current_column () to int.
	* cmds.c (internal_self_insert): Likewise.
	* indent.c (Fcurrent_column): Likewise.
	* keymap.c (describe_command): Likewise.
	* minibuf.c (read_minibuf): Likewise.
	* indent.c (Fcurrent_indentation): Don't cast position_indentation ()